# send-lxmf

./: .gitignore  DEVGUIDE.md  INSTALL.md  Makefile  README.md  default.nix  install.sh  pyproject.toml  send-lxmf.conf  shell.nix  uninstall.sh
.kilo/plans/: 1776754358760-shiny-meadow.md
doc/: architecture.md  nixos-sendmail.md  send-lxmf.md  sendmail-lxmf.md
installer/alpine/: install.sh  lxmf-sender.initd  uninstall.sh
installer/debian/: install.sh  lxmf-sender.service  uninstall.sh
lxmf_sender/: __main__.py  client.py  lib.py  lxmf-sender.conf  queue.py  send.py  sendmail.py  server.py
send_lxmf/: __init__.py  __main__.py  lib.py  pool.py  send.py  sendmail.py
tests/: test_main.py  test_pool.py  test_queue.py  test_send.py  test_sendmail.py  test_server.py
tests/integration/: Dockerfile.receiver  Dockerfile.sender  docker-compose.yml  receiver.py  rnsd-receiver.conf  rnsd-sender.conf  test_lxmf.py
tests/unit/: test_send.py
