[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "send-lxmf"
dynamic = ["version"]
description = "Send LXMF messages from the command line"
requires-python = ">=3.8"
license = "MIT"
readme = "README.md"
authors = [{ name = "Martin Elsner" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["lxmf", "markdownify", "platformdirs"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
send-lxmf = "send_lxmf.send:main"
sendmail-lxmf = "send_lxmf.sendmail:main"

[project.urls]
Homepage = "https://codeberg.org/melsner/send-lxmf"
Repository = "https://codeberg.org/melsner/send-lxmf"

[tool.setuptools.dynamic]
version = {attr = "send_lxmf.__version__"}
