[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lxmf-sender"
dynamic = ["version"]
description = "Send LXMF messages from the command line"
requires-python = ">=3.8"
license = "MIT"
readme = "README.md"
authors = [{ name = "Martin Elsner" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["lxmf", "markdownify", "platformdirs"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
send-lxmf = "lxmf_sender.send:main"
sendmail-lxmf = "lxmf_sender.sendmail:main"
lxmf-sender = "lxmf_sender.server:main"

[project.urls]
Homepage = "https://codeberg.org/melsner/send-lxmf"
Repository = "https://codeberg.org/melsner/send-lxmf"

[tool.setuptools.dynamic]
version = {attr = "lxmf_sender.__version__"}

[tool.setuptools.packages.find]
include = ["lxmf_sender*"]

[tool.setuptools.package-data]
lxmf_sender = ["lxmf-sender.conf"]
